--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,79 @@
+
+deeplabcut/pose_estimation_tensorflow/models/pretrained/resnet_v1_101.ckpt
+deeplabcut/pose_estimation_tensorflow/models/pretrained/resnet_v1_50.ckpt
+*.ckpt
+*.ckpt
+*.vscode
+*.mp4
+*.mp4
+*.tdms
+*.jpg
+*.xml
+*.idea
+*.pyc
+.DS_Store
+Users/
+deeplabcut/pose_estimation_tensorflow/models/pretrained/resnet_v1_101.ckpt
+deeplabcut/pose_estimation_tensorflow/models/pretrained/resnet_v1_50.ckpt
+
+*/__pycache__
+__pycache__
+*.idea
+.idea
+*.ipynb_checkpoints
+*.ipynb_checkpoints/
+*tempCodeRunnerFile.py
+
+# Ignored file types
+*.ckpt
+*.vscode
+*.json
+*.xml
+*.idea
+*.pyc
+*.vtk
+*.obj
+*.stl
+*.nrrd
+*.swc
+*.svg
+*.tdms
+
+# These file formats are tracked
+# *.avi
+# *.png
+# *.mp4
+# *.jpg
+
+# Output folder where screnshots etx. are saved
+Output/Data/*
+Output/Scenes/*
+Output/Screenshots/*
+Output/Videos/*
+Data/ABA/*
+
+# User folder where they can save stuff without it being tracked by git
+User/*
+
+# This folder is sometimes created when the incorrect paths are passed
+mouse_connectivity
+
+# Visual studio stuff
+*/tempCodeRunnerFile.py
+*/.ipynb_checkpoints
+.ipynb_checkpoints
+*/__pycache__
+__pycache__
+.DS_Store
+Users/
+
+# Test scripts and hidden files
+workspace.py
+secrets
+
+# Custom config files
+*.conf.custom
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -20,8 +96,6 @@ parts/
 sdist/
 var/
 wheels/
-pip-wheel-metadata/
-share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -40,14 +114,12 @@ pip-delete-this-directory.txt
 # Unit test / coverage reports
 htmlcov/
 .tox/
-.nox/
 .coverage
 .coverage.*
 .cache
 nosetests.xml
 coverage.xml
 *.cover
-*.py,cover
 .hypothesis/
 .pytest_cache/
 
@@ -59,7 +131,6 @@ coverage.xml
 *.log
 local_settings.py
 db.sqlite3
-db.sqlite3-journal
 
 # Flask stuff:
 instance/
@@ -69,34 +140,20 @@ instance/
 .scrapy
 
 # Sphinx documentation
-docs/_build/
+doc/build/
+
+# pydocmd
+_build/
+mkdocs.yml
 
 # PyBuilder
 target/
 
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
 # pyenv
 .python-version
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
+# celery beat schedule file
 celerybeat-schedule
-celerybeat.pid
 
 # SageMath parsed files
 *.sage.py
@@ -122,8 +179,9 @@ venv.bak/
 
 # mypy
 .mypy_cache/
-.dmypy.json
-dmypy.json
 
-# Pyre type checker
-.pyre/
+.idea/
+
+*.~lock.*
+
+
