added mtx load/save

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 
-deeplabcut/pose_estimation_tensorflow/models/pretrained/resnet_v1_101.ckpt
-deeplabcut/pose_estimation_tensorflow/models/pretrained/resnet_v1_50.ckpt
+
 *.ckpt
 *.ckpt
 *.vscode
@@ -13,8 +12,7 @@ deeplabcut/pose_estimation_tensorflow/models/pretrained/resnet_v1_50.ckpt
 *.pyc
 .DS_Store
 Users/
-deeplabcut/pose_estimation_tensorflow/models/pretrained/resnet_v1_101.ckpt
-deeplabcut/pose_estimation_tensorflow/models/pretrained/resnet_v1_50.ckpt
+*.npy
 
 */__pycache__
 __pycache__
